--- a/extra-addons/employee_payroll_attendance/views/menu_reporting.xml
+++ b/extra-addons/employee_payroll_attendance/views/menu_reporting.xml
@@ -1,6 +1,6 @@
 <odoo>
-    <record id="view_hr_payslip_custom" model="ir.ui.view">
-        <field name="name">hr.payslip.custom</field>
+    <record id="view_hr_payslip_form" model="ir.ui.view">
+        <field name="name">hr.payslip.form</field>
         <field name="model">hr.payslip</field>
         <field name="arch" type="xml">
             <form string="Payslip">
