--- a/extra-addons/employee_payroll_attendance/views/hr_payslip_views.xml
+++ b/extra-addons/employee_payroll_attendance/views/hr_payslip_views.xml
@@ -5,7 +5,7 @@
         <field name="name">Payslips</field>
         <field name="res_model">hr.payslip</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{'group_by': ['date_to:month',"date_to:day"]}</field>
+        <field name="context">{'group_by': ['date_to:month']}</field>
         
     </record>
 
