--- a/extra-addons/employee_payroll_attendance/views/hr_payslip_views.xml
+++ b/extra-addons/employee_payroll_attendance/views/hr_payslip_views.xml
@@ -5,7 +5,7 @@
         <field name="name">Payslips</field>
         <field name="res_model">hr.payslip</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{'group_by': ['date_to:month']}</field>
+        <field name="context">{'group_by': ['date_to:month',"date_to:day"]}</field>
         
     </record>
 
@@ -75,20 +75,25 @@
                         <field name="total_working_hours" readonly="1"/>
                         <field name="approved_working_days" readonly="1"/>
                         <field name="approved_working_hours" readonly="1"/>
-                    </group>
-
-                    
+                    </group>                    
                     <group string="Attendance Records">
-                        <field name="attendance_ids" readonly="1">
-                            <tree string="Attendance Records">
+                        <field name="attendance_ids" readonly="0">
+                            <tree string="Attendance Records" editable="bottom">
                                 <field name="check_in"/>
                                 <field name="check_out"/>
                                 <field name="worked_hours"/>
                                 <field name="approved"/>
-                                <button name="toggle_approval" type="object" string="Approve" attrs="{'invisible': [('approved', '=', True)]}" class="btn-primary oe_inline"/>
-                                <button name="toggle_approval" type="object" string="Unapprove" attrs="{'invisible': [('approved', '=', False)]}" class="btn-danger oe_inline"/>
-                                <!-- View Details Button -->
-                                <button name="action_view_details" type="object" string="View Details" class="btn-secondary oe_inline"/>
+                                <!-- Nút Approve -->
+                                <button name="toggle_approval" type="object" string="Approve"
+                                        attrs="{'invisible': [('approved', '=', True)]}"
+                                        class="btn-primary oe_inline"/>
+                                <!-- Nút Unapprove -->
+                                <button name="toggle_approval" type="object" string="Unapprove"
+                                        attrs="{'invisible': [('approved', '=', False)]}"
+                                        class="btn-danger oe_inline"/>
+                                <!-- Nút View Details -->
+                                <button name="action_view_details" type="object" string="View Details"
+                                        class="btn-secondary oe_inline"/>
                             </tree>
                         </field>
                     </group>
