--- a/employee_payroll_attendance/views/custom_report_layout.xml
+++ b/employee_payroll_attendance/views/custom_report_layout.xml
@@ -77,70 +77,73 @@
             <attribute name="style">margin-top: 1rem !important;</attribute>
         </xpath>
 
-        <xpath expr="//div[@id='total']//table[@class='table table-sm table-borderless']" position="inside">
-            <!-- Subtotal -->
-            <tr>
-                <td class="text-start">
-                    <strong>Subtotal:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.amount_total" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
-            <!-- Discount -->
-            <tr>
-                <td class="text-start">
-                    <strong>Discount:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.discount or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
-            <!-- Subtotal Less Discount -->
-            <tr>
-                <td class="text-start">
-                    <strong>Subtotal Less Discount:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.amount_total - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
-            <!-- Tax Rate -->
-            <tr>
-                <td class="text-start">
-                    <strong>Tax Rate:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.tax_rate or 'N/A'"/>
-                </td>
-            </tr>
-            <!-- Total Tax -->
-            <tr>
-                <td class="text-start">
-                    <strong>Total Tax:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.amount_tax" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
-            <!-- Bank Fee -->
-            <tr>
-                <td class="text-start">
-                    <strong>Bank Fee:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.bank_fee or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
-            <!-- Balance Due -->
-            <tr>
-                <td class="text-start">
-                    <strong>Balance Due:</strong>
-                </td>
-                <td class="text-end">
-                    <span t-esc="o.amount_total - (o.discount or 0.0) + o.amount_tax + (o.bank_fee or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                </td>
-            </tr>
+        <!-- Thay thế Untaxed Amount và Total -->
+        <xpath expr="//div[@id='total']//table[@class='table table-sm table-borderless']" position="replace">
+            <table class="table table-sm table-borderless" style="page-break-inside: avoid;">
+                <!-- Subtotal -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Subtotal:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_total" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+                <!-- Discount -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Discount:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.discount or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+                <!-- Subtotal Less Discount -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Subtotal Less Discount:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_total - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+                <!-- Tax Rate -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Tax Rate 15%:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.tax_rate or 'N/A'"/>
+                    </td>
+                </tr>
+                <!-- Total Tax -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Total Tax:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_tax" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+                <!-- Bank Fee -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Bank Fee:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.bank_fee or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+                <!-- Balance Due -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Balance Due:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_total - (o.discount or 0.0) + o.amount_tax + (o.bank_fee or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+            </table>
         </xpath>
     </template>
 
