--- a/employee_payroll_attendance/views/hr_payslip_views_update.xml
+++ b/employee_payroll_attendance/views/hr_payslip_views_update.xml
@@ -43,7 +43,7 @@
     </record>
 
     <!-- Server Action for Updating Rate Fallback -->
-    <record id="action_update_rate_fallback_server" model="ir.actions.server">
+    <!-- <record id="action_update_rate_fallback_server" model="ir.actions.server">
         <field name="name">Update Rate Fallback</field>
         <field name="model_id" ref="employee_payroll_attendance.model_hr_payslip"/>
         <field name="binding_model_id" ref="employee_payroll_attendance.model_hr_payslip"/>
@@ -52,9 +52,9 @@
         <field name="code">
             action = env['ir.actions.act_window']._for_xml_id('employee_payroll_attendance.action_update_rate_fallback')
         </field>
-    </record>
+    </record> -->
     <!-- Wizard for Updating Rate Fallback -->
-    <record id="view_hr_payslip_update_rate_wizard" model="ir.ui.view">
+    <!-- <record id="view_hr_payslip_update_rate_wizard" model="ir.ui.view">
         <field name="name">hr.payslip.update.rate.wizard.form</field>
         <field name="model">hr.payslip.update.rate.wizard</field>
         <field name="arch" type="xml">
@@ -68,16 +68,16 @@
                 </footer>
             </form>
         </field>
-    </record>
+    </record> -->
 
     <!-- Server Action to Open Update Rate Fallback Wizard -->
-    <record id="action_update_rate_fallback" model="ir.actions.act_window">
+    <!-- <record id="action_update_rate_fallback" model="ir.actions.act_window">
         <field name="name">Update Rate Fallback</field>
         <field name="res_model">hr.payslip.update.rate.wizard</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="view_hr_payslip_update_rate_wizard"/>
         <field name="target">new</field>
-    </record>
+    </record> -->
 
     <!-- Wizard Form View for Duplicating Payslip -->
     <record id="view_hr_payslip_duplicate_wizard" model="ir.ui.view">
